исправил ошибки и добавил hoverанимации на форму

--- a/src/style/base/request.scss
+++ b/src/style/base/request.scss
@@ -48,6 +48,11 @@
       &:last-child {
         margin-bottom: 0;
       }
+
+      &:hover {
+        background-color: #e4ebf3;
+        cursor: pointer;
+      }
     }
 
     &__submit-box {
