--- a/src/style/base/box.scss
+++ b/src/style/base/box.scss
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
 
-    padding-top: 76px;
+    margin-top: 76px;
 
     h2 {
       @include text-h2();
@@ -12,7 +12,6 @@
   }
 
   &__content {
-    width: 100%;
     padding: 24px 0;
     justify-content: space-between;
   }
